@@ -24,9 +24,10 @@
 #define FEATURE_BINARY_FLOATING_POINT
 #define FEATURE_BRANCH_AND_SET_AUTHORITY
 #define FEATURE_BROADCASTED_PURGING
-#define FEATURE_CANCEL_IO_FACILITY
+#define FEATURE_CANCEL_IO_FACILITY /* comment if FEATURE_S370_CHANNEL used */
 #define FEATURE_CALLED_SPACE_IDENTIFICATION
-#define FEATURE_CHANNEL_SUBSYSTEM
+#define FEATURE_CHANNEL_SUBSYSTEM  /* comment if FEATURE_S370_CHANNEL used */
+//#define FEATURE_CHANNEL_SWITCHING  /* comment if FEATURE_CHANNEL_SUBSYSTEM used */
 #define FEATURE_CHECKSUM_INSTRUCTION
 #define FEATURE_CHSC
 #define FEATURE_COMPARE_AND_MOVE_EXTENDED
@@ -78,6 +79,7 @@
 #define FEATURE_QUEUED_DIRECT_IO
 #define FEATURE_REGION_RELOCATE
 #define FEATURE_RESUME_PROGRAM
+//#define FEATURE_S370_CHANNEL  /* comment if FEATURE_CHANNEL_SUBSYSTEM used */
 #define FEATURE_S390_DAT
 #define FEATURE_SCEDIO
 #define FEATURE_SERVICE_PROCESSOR
